--- a/src/skyweather2.service
+++ b/src/skyweather2.service
@@ -1,8 +1,9 @@
 # skyweather2.service
 [Unit]
-Description=skyweather2 service
+Description=service to manage the skyweather2 service
 After=network.target
 After=mysqld.service
+
 [Service]
 Type=idle
 ExecStart=/home/pi/bin/skyweather2exec.sh
