--- a/src/sky2dash.service
+++ b/src/sky2dash.service
@@ -1,5 +1,5 @@
 [Unit]
-Description= service file to manage the SDL SkyWeather2 dashboard app service
+Description= Service file to manage the SDL SkyWeather2 dashboard app service
 After=network.target
 After=mysqld.service
 
